remove unused class

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
   -->
 
 <!DOCTYPE html>
-<html lang="en" class="dark-theme">
+<html lang="en">
   <head>
     <meta charset="utf-8" />
     <title>AngularReduxShop</title>
