--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   --><!DOCTYPE html><html lang="en"><head><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <meta charset="utf-8">
     <title>Angular Redux Shop</title>
-    <base href="/angular-styleguide">
+    <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
